--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -6,7 +6,7 @@ on:
         branches:
             - master
     schedule:
-        - cron: '27 * * * *'
+        - cron: '*/20 * * * *'
 jobs:
     build:
         runs-on: ubuntu-latest
