--- a/.github/workflows/dkd.yml
+++ b/.github/workflows/dkd.yml
@@ -4,7 +4,7 @@ name: Github dkd-auto-coin
 on:
     workflow_dispatch:
     schedule:
-        - cron: '27 * * * *' 
+        - cron: '*/20 * * * *' 
     watch: 
      types: [started]
 jobs:
